--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 230vw;
     background: #F5EEE0;
     box-shadow: inset 0px -110px 90px rgba(0, 0, 0, 0.25);
 }
@@ -8,7 +8,7 @@ html {
 }
 .First_page_title {
     width: 100vw;
-    height: 20vw;
+    height: 60vw;
     font-size: 14vw;
     text-align: center;
     font-family: Verdana, sans-serif;
@@ -28,7 +28,7 @@ html {
 
 .Button_div {
     position: relative;
-    height: 150vw;
+    height: 50vw;
     margin: 0 auto;
 }
 
@@ -42,7 +42,8 @@ html {
 
 #Pick_me_button {
     position: absolute;
-    top: 50vw;
+    /*top: 50vw;*/
+    margin-top: 10vw;
     background-color: #A6A2EF;
 }
 
