--- a/src/LowerBar.css
+++ b/src/LowerBar.css
@@ -17,7 +17,9 @@
     background: rgb(200, 41, 41);
     padding: 0;
     border: none;
-    
+}
+.knappar_bot:active {
+    background-color: rgb(107, 20, 20);
 }
 
 .knappar_text{
