--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-html {
-  height: 230vw;
-  background: #f5eee0;
-  box-shadow: inset 0px -110px 90px rgba(0, 0, 0, 0.25);
+/*Variabler*/
+:root {
+  --BlåFärg: #a6a2ef;
 }
 
-.App {
-  height: 100%;
+html {
+  height: calc(100%);
+  background: #f5eee0;
+  box-shadow: inset 0px -110px 90px rgba(0, 0, 0, 0.25);
 }
 
 /*Första sidans css*/
@@ -41,20 +42,20 @@ html {
   height: 25vw;
   margin-left: 10%;
   margin-right: 10%;
-  background: #a6a2ef;
+  background: var(--BlåFärg);
 }
 
 #Pick_me_button {
   position: absolute;
   /*top: 50vw;*/
   margin-top: 10vw;
-  background-color: #a6a2ef;
+  background-color: var(--BlåFärg);
 }
 
 #Alla_spel_button {
   position: absolute;
   top: 100vw;
-  background-color: #a6a2ef;
+  background-color: var(--BlåFärg);
 }
 
 /*Alla spel css*/
@@ -63,8 +64,8 @@ html {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 40vw;
-  background-color: #a6a2ef;
+  height: 30vw;
+  background-color: var(--BlåFärg);
 }
 
 .SidaHeader {
@@ -73,9 +74,18 @@ html {
   line-height: 30vw;
 }
 
+.ListaDiv {
+  height: 160vw;
+  overflow: scroll;
+}
+
 .Alla_spel_listans_text {
   text-align: center;
-  background-color: #a6a2ef;
+  background-color: var(--BlåFärg);
   margin-left: 5vw;
   margin-right: 5vw;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
