--- a/src/LowerBar.css
+++ b/src/LowerBar.css
@@ -1,8 +1,8 @@
 .Foot {
-  position: sticky;
+  position: fixed;
   background-color: #a6a2ef;
   width: 100%;
-  height: 30vw;
+  height: 25vw;
   margin-top: 12vw;
   bottom: 0;
 }
@@ -22,7 +22,7 @@
 
 .knappar_text {
   text-align: center;
-  margin-top: 20%;
+  margin-top: 0%;
   color: white;
 }
 
