--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,50 @@ a {
   text-decoration: none;
   color: black;
 }
+
+/*Detalj sida css*/
+
+.HeadPic {
+  margin-top: 2vw;
+  margin-left: 2vw;
+  height: 7vw;
+  width: 5vw;
+}
+#DetaljNamn {
+  line-height: 15vw;
+}
+
+/*Lowerbar*/
+.Foot {
+  position: fixed;
+  background-color: #a6a2ef;
+  width: 100%;
+  height: 25vw;
+  margin-top: 12vw;
+  bottom: 0;
+}
+
+.knappar_bot {
+  position: relative;
+  width: 22vw;
+  height: 25vw;
+  margin-left: 0%;
+  margin-right: 2%;
+  top: 0%;
+  margin-bottom: 20%;
+  background: #a6a2ef;
+  padding: 0;
+  border: none;
+}
+
+.knappar_text {
+  text-align: center;
+  margin-top: 0%;
+  color: white;
+}
+
+.FPic {
+  margin-top: 4vw;
+  height: 50px;
+  width: 40px;
+}
