--- a/src/App.css
+++ b/src/App.css
@@ -121,14 +121,14 @@ a {
   position: fixed;
   background-color: #a6a2ef;
   width: 100%;
-  height: 25vw;
+  height: 23vw;
   margin-top: 12vw;
   bottom: 0;
 }
 
 .knappar_bot {
   position: relative;
-  width: 22vw;
+  width: 18vw;
   height: 25vw;
   margin-left: 0%;
   margin-right: 2%;
@@ -140,6 +140,8 @@ a {
 }
 
 .knappar_text {
+  font-family: /*"Brush Script MT"*/"Lucida Handwriting", "Times New Roman", serif;
+  font-size: 3vw;
   text-align: center;
   margin-top: 0%;
   color: white;
