--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,8 @@ a {
 /*Lowerbar*/
 .Foot {
   position: fixed;
-  background-color: #a6a2ef;
+  background: linear-gradient(180deg, #D76E33 0%, #D547B5 100%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 23vw;
   margin-top: 12vw;
@@ -153,7 +154,7 @@ a {
   margin-right: 2%;
   top: 0%;
   margin-bottom: 20%;
-  background: #a6a2ef;
+  background: linear-gradient(180deg, #D76E33 0%, #D547B5 100%);
   padding: 0;
   border: none;
 }
