--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ html {
 }
 
 .ListaTitel {
+  text-align: center;
   margin-bottom: 0vw;
 }
 
@@ -133,7 +134,10 @@ a {
 }
 
 .favBox {
+
   float: right;
+  margin-top: 2.5vw;
+  margin-right: 2.5vw;
   height: 5vw;
   width: 5vw;
 }
