--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,14 @@ html {
   top: 0;
   width: 100%;
   height: 30vw;
-  background-color: var(--BlåFärg);
 }
 
 .SidaHeader {
-  background: linear-gradient(181.54deg, rgba(212, 71, 181, 0.68) 28.85%, rgba(215, 110, 51, 0.8) 81.6%);
+  background: linear-gradient(
+    181.54deg,
+    rgba(212, 71, 181, 0.68) 28.85%,
+    rgba(215, 110, 51, 0.8) 81.6%
+  );
 
   font-size: 15vw;
   text-align: center;
@@ -166,7 +169,7 @@ a {
 /*Lowerbar*/
 .Foot {
   position: fixed;
-  background: linear-gradient(180deg, #D76E33 0%, #D547B5 100%);
+  background: linear-gradient(180deg, #d76e33 0%, #d547b5 100%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 23vw;
@@ -182,7 +185,7 @@ a {
   margin-right: 2%;
   top: 0%;
   margin-bottom: 20%;
-  background: linear-gradient(180deg, #D76E33 0%, #D547B5 100%);
+  background: linear-gradient(180deg, #d76e33 0%, #d547b5 100%);
   padding: 0;
   border: none;
 }
