--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ html {
 .ListaTitel {
   text-align: center;
   margin-bottom: 0vw;
-  color: #550055;
+  color: #031d44;
   font-family: myFirstFont;
 }
 
