--- a/src/App.css
+++ b/src/App.css
@@ -209,3 +209,26 @@ a {
   height: 50px;
   width: 40px;
 }
+
+
+/*Detaljer*/
+
+#detalj_ID{
+  color: white;
+  margin-left: 3vw;
+  width: calc(100%);
+  
+}
+
+.spelare{
+  height: 10vw;
+  
+}
+
+.material{
+  height: 10vw;
+}
+
+.regler{
+  height: 90vw;
+}
