--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ html {
 
 .Button_first_page {
   width: 80vw;
-  height: 20vw;
+  height: 30vw;
   border-radius: 30px 30px 30px 30px;
   margin-left: 10%;
   margin-right: 10%;
@@ -109,13 +109,7 @@ html {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   text-align: center;
 
-  background-image: linear-gradient(
-    180deg,
-    rgba(213, 71, 181, 0) 0%,
-    #d547b5 0.01%,
-    #d76e33 100%,
-    #d76e33 100%
-  );
+background-color:    #d76e33;
   margin-left: 2vw;
   margin-right: 5vw;
   color: white;
