--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ html {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   text-align: center;
 
-background-color:    #d76e33;
+  background-color: #1c1f33;
   margin-left: 2vw;
   margin-right: 5vw;
   color: white;
