--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ html {
 .App {
   height: calc(100%);
   background-image: url("Bilder/bakgrundVanlig.png");
+  white-space: pre-line;
 }
 
 /*Första sidans css*/
@@ -99,6 +100,7 @@ html {
   font-size: 15vw;
   text-align: center;
   line-height: 30vw;
+  text-shadow: 1px 3px 6px #cacaca;
 }
 
 
@@ -108,6 +110,7 @@ html {
   border-radius: 30px 30px 30px 30px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   text-align: center;
+  font-family: myFirstFont;
 
   background-image: linear-gradient(
     180deg,
@@ -165,13 +168,18 @@ a {
 
 #spelinfo {
   margin: 2vw;
+  font-family: myFirstFont;
+  text-shadow: 1px 3px 6px #cacaca;
 }
 
 #speltitel {
   text-align: center;
   font-size: 8.5vw;
-  text-shadow: 1.5px 3px 7px black;
   margin-top: 9vw;
+  font-family: myFirstFont;
+  text-shadow: 1px 3px 6px #cacaca;
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
 }
 
 #speldetalj {
@@ -180,16 +188,21 @@ a {
   border-top-left-radius: 6vw;
   border-top-right-radius: 6vw;
   font-size: 5vw;
+  font-family: myFirstFont;
 }
 
 #detaljtitel {
   font-size: 6vw;
   margin: 5vw;
+  font-family: myFirstFont;
+  
 }
 
 #speltext {
   margin: 4vw;
   margin-left: 9vw;
+  font-family: myFirstFont;
+  color:rgba(61, 61, 75, 0.801);
 }
 
 .HeadPic {
@@ -201,6 +214,7 @@ a {
 }
 #DetaljNamn {
   line-height: 15vw;
+  font-family: myFirstFont;
 }
 
 .TillbakaText {
@@ -237,22 +251,32 @@ a {
   background: linear-gradient(180deg, #d76e33 0%, #d547b5 100%);
   padding: 0;
   border: none;
+  z-index: -1;
 }
 
-
-
 .knappar_text {
+  position: relative;
   font-family: myFirstFont;
   font-size: 3vw;
   text-align: center;
   margin-top: 0%;
   color: white;
+
 }
 
 .FPic {
+  position: relative;
   margin-top: 4vw;
   height: 50px;
   width: 40px;
+  z-index: -1;
+}
+
+#active {
+  background-color:black;
+  border: 2vw;
+  border-radius: 2vw;
+  z-index: 0;
 }
 
 
