--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@ html {
   color: #161b40;
 }
 
+.Logotyp {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30vw;
+  margin-bottom: 20vw;
+  height: 45vw;
+}
+
 .First_page_buttontext {
   font-family: myFirstFont;
   display: inline-block;
@@ -37,7 +46,7 @@ html {
   vertical-align: middle;
   line-height: normal;
   font-size: 8vw;
-  color: white;
+  color: black;
 }
 
 .Button_div {
@@ -49,18 +58,17 @@ html {
 
 .Button_first_page {
   width: 80vw;
-  height: 30vw;
+  height: 25vw;
   border-radius: 30px 30px 30px 30px;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
   align-content: center;
-  background-image: linear-gradient(
+  background: linear-gradient(
     180deg,
-    rgba(213, 71, 181, 0) 0%,
-    #d547b5 0.01%,
-    #d76e33 100%,
-    #d76e33 100%
+    #f7e441 13.02%,
+    #f1dd25 55.21%,
+    #cb740e 100%
   );
   border: 0px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
@@ -81,7 +89,6 @@ html {
   top: 100vw;
   background-color: var(--BlåFärg);
 }
-
 /*Alla spel css*/
 
 .HeaderDiv {
@@ -102,7 +109,7 @@ html {
 .Alla_spel_listans_text {
   width: 95vw;
   height: 27vw;
-  border-radius: 30px 30px 30px 30px;
+  border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   text-align: center;
 
@@ -112,7 +119,7 @@ html {
   margin-bottom: 0vw;
   margin-top: 0vw;
 
-  background: rgba(131, 80, 203, 0.8);
+  background: linear-gradient(360deg, #feef65 29.33%, #ffc700 240.67%);
 }
 
 .ListaTitel {
@@ -128,7 +135,7 @@ html {
   margin-top: 2vw;
   margin-left: 2vw;
   margin-right: 2vw;
-  color: rgb(192, 192, 192);
+  color: #031d44;
   font-family: myFirstFont;
 }
 a {
@@ -175,7 +182,7 @@ a {
 /*Lowerbar*/
 .Foot {
   position: fixed;
-  background: linear-gradient(180deg, #d76e33 0%, #d547b5 100%);
+  background: linear-gradient(180deg, #ffb800 -37.5%, #f6e441 50%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 23vw;
@@ -191,7 +198,7 @@ a {
   margin-right: 2%;
   top: 0%;
   margin-bottom: 20%;
-  background: linear-gradient(180deg, #d76e33 0%, #d547b5 100%);
+  background: linear-gradient(180deg, #ffb800 -37.5%, #f6e441 50%);
   padding: 0;
   border: none;
 }
@@ -201,7 +208,7 @@ a {
   font-size: 3vw;
   text-align: center;
   margin-top: 0%;
-  color: white;
+  color: black;
 }
 
 .FPic {
