--- a/src/App.css
+++ b/src/App.css
@@ -300,3 +300,87 @@ a {
   width: 100%;
   opacity: 0.5;
 }
+/*Lägg till sida*/
+label {
+  margin-bottom: 10vw;
+  font-size: 5vw;
+}
+.LäggtillKnapp {
+  margin: 0;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+  width: 30vw;
+  height: 15vw;
+  border-radius: 10px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+  text-align: center;
+  font-family: myFirstFont;
+  background: linear-gradient(180deg, #ffb800 -37.5%, #f6e441 50%);
+}
+.container {
+  border-radius: 5px;
+  padding-left: 20px;
+  font-family: myFirstFont;
+}
+
+.LäggtillForms {
+  font-family: myFirstFont;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 1vw;
+  background-color: #f8f8f8;
+  resize: none;
+  margin-bottom: 4vw;
+  margin-top: 2vw;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+#fRegler {
+  width: 90%;
+  height: 30vw;
+  padding: 1vw 2vw;
+}
+#fTitel {
+  padding: 1vw 2vw;
+  width: 90%;
+}
+#fMats {
+  padding: 1vw 2vw;
+  width: 90%;
+}
+#fAntal {
+  padding: 1vw 2vw;
+  width: 90%;
+}
+#fBesk {
+  padding: 1vw 2vw;
+  height: 30vw;
+  width: 90%;
+}
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  height: 60vw;
+}
