--- a/src/App.css
+++ b/src/App.css
@@ -20,22 +20,13 @@ html {
 
 /*Första sidans css*/
 
-.First_page_title {
-  width: 100vw;
-  height: 60vw;
-  font-size: 14vw;
-  text-align: center;
-  font-family: myFirstFont;
-  color: #161b40;
-}
-
 .Logotyp {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30vw;
-  margin-bottom: 20vw;
-  height: 45vw;
+  margin-top: 35vw;
+  margin-bottom: 0.5vw;
+  height: 47vw;
 }
 
 .First_page_buttontext {
@@ -47,40 +38,33 @@ html {
   vertical-align: middle;
   line-height: normal;
   font-size: 8vw;
-  color: black;
+  color: #3C3C3C;
 }
 
 .Button_div {
   position: relative;
-
-  height: 50vw;
+  height: 36vw;
   margin: 0 auto;
 }
 
 .Button_first_page {
   width: 80vw;
-  height: 25vw;
-  border-radius: 30px 30px 30px 30px;
-  margin-left: 10%;
-  margin-right: 10%;
-  text-align: center;
-  align-content: center;
-  background: linear-gradient(
-    180deg,
-    #f7e441 13.02%,
-    #f1dd25 55.21%,
-    #cb740e 100%
-  );
-  border: 0px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+  height: 24vw;
+  position: absolute;
+  left: 10%;
+  right: 1.79%;
+  top: 0%;
+  bottom: 7.69%;
+  background: linear-gradient(180deg, #F7E441 13.02%, #F1DD25 55.21%, #CB740E 100%);
+  box-shadow: 6px 4px 1px rgba(0, 0, 0, 0.45);
+  border-radius: 100px;
 }
 .Button_first_page:active {
-  background: #000000;
+  background: #3C3C3C;
 }
 
 #Pick_me_button {
   position: absolute;
-  /*top: 50vw;*/
   margin-top: 10vw;
   background-color: var(--BlåFärg);
 }
@@ -90,7 +74,7 @@ html {
   top: 100vw;
   background-color: var(--BlåFärg);
 }
-/*Alla spel css*/
+/*-------------Alla spel css-------------*/
 
 .HeaderDiv {
   width: 100%;
@@ -110,27 +94,25 @@ html {
 
 .Alla_spel_listans_text {
   width: 95vw;
-  height: 27vw;
+  height: 30vw;
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   text-align: center;
   font-family: myFirstFont;
-
   background-color: #1c1f33;
   margin-left: 2vw;
   margin-right: 5vw;
   margin-bottom: 0vw;
-  margin-top: 0vw;
-
+  margin-top: 3vw;
   background: linear-gradient(360deg, #feef65 29.33%, #ffc700 240.67%);
 }
 
 .ListaTitel {
   color: #031d44;
-
   text-align: center;
-  margin-bottom: 0vw;
-  color: #031d44;
+  padding-top: 2vw;
+  margin-bottom: -1vw;
+  margin-left: 8vw;
   font-family: myFirstFont;
 }
 
@@ -138,18 +120,21 @@ html {
   margin-top: 2vw;
   margin-left: 2vw;
   margin-right: 2vw;
-  color: #031d44;
+  color: #8a8a8a;
   font-family: myFirstFont;
 }
+
 a {
   text-decoration: none;
-  color: black;
+  color: #cacaca;
 }
 
 .favBox {
   float: right;
-  height: 7vw;
-  width: 7vw;
+  height: 8vw;
+  width: 8vw;
+  margin-right: 2vw;
+  margin-top: 2vw;
 }
 
 #FPicFav2 {
@@ -157,7 +142,7 @@ a {
   width: 7vw;
 }
 
-/*Detalj sida css*/
+/*-------------Detalj sida css-------------*/
 
 #spelinfo {
   margin: 2vw;
@@ -167,19 +152,22 @@ a {
 
 #speltitel {
   text-align: center;
-  font-size: 8.5vw;
+  font-size: 10vw;
+  color:rgb(226, 225, 225);
   margin-top: 9vw;
+
   font-family: myFirstFont;
-  text-shadow: 1px 3px 6px #cacaca;
+  /*text-shadow: 1px 3px 6px #cacaca63;
   text-decoration-line: underline;
-  text-decoration-style: wavy;
+  text-decoration-style:solid;*/
 }
 
 #speldetalj {
   display: inline-block;
-  background-color: rgba(250, 208, 208, 0.6);
-  border-top-left-radius: 6vw;
-  border-top-right-radius: 6vw;
+  margin-top: -5vw;
+  background: rgb(230, 176, 226);
+  border-top-left-radius: 8vw;
+  border-top-right-radius: 8vw;
   font-size: 5vw;
   font-family: myFirstFont;
 }
@@ -190,11 +178,15 @@ a {
   font-family: myFirstFont;
 }
 
+#detaljtiteltext{
+  color:#f1f1f1
+}
+
 #speltext {
   margin: 4vw;
   margin-left: 9vw;
   font-family: myFirstFont;
-  color: rgba(61, 61, 75, 0.801);
+  color: rgb(78, 78, 82);
 }
 
 .HeadPic {
@@ -204,6 +196,51 @@ a {
   width: 5vw;
   float: left;
 }
+
+.titeldetalj {
+  margin-top: 0vw;
+  margin-left:  11.5vw;
+  margin-right: 0.5vw;
+  margin-bottom: 4vw;
+  height: 16vw;
+  width: 80vw;
+  float: left;
+}
+
+.titelallaspel {
+  margin-top: 6vw;
+  margin-left:  10.5vw;
+  margin-right: 1vw;
+  margin-bottom: 2.5vw;
+  height: 16vw;
+  width: 80vw;
+  float: left;
+}
+
+.titelfavo {
+  margin-top: 6vw;
+  margin-left:  12.5vw;
+  margin-right: 1vw;
+  margin-bottom: 2.5vw;
+  height: 16vw;
+  width: 75vw;
+  float: left;
+}
+
+.titelsok {
+  margin-top: 6vw;
+  margin-left:  15vw;
+  margin-right: 1vw;
+  margin-bottom: 2.5vw;
+  height: 20vw;
+  width: 70vw;
+  float: left;
+}
+
+.felmeddelande{
+  font-family: myFirstFont;
+}
+
 #DetaljNamn {
   line-height: 15vw;
   font-family: myFirstFont;
@@ -221,7 +258,7 @@ a {
   overflow: scroll;
 }
 
-/*Lowerbar*/
+/*--------------Lowerbar--------------*/
 .Foot {
   position: fixed;
   background: linear-gradient(180deg, #ffb800 -37.5%, #f6e441 50%);
@@ -275,7 +312,7 @@ a {
   width: 50px;
 }
 
-/*Detaljer*/
+/*--------------Detaljer---------------*/
 
 #detalj_ID {
   color: white;
@@ -296,7 +333,13 @@ a {
 }
 
 .isaksearch {
-  height: 50px;
-  width: 100%;
+  height: 40px;
+  width: 90%;
+  margin: 5%;
   opacity: 0.5;
+}
+
+.asticky {
+  position:static;
+
 }
