--- a/src/App.css
+++ b/src/App.css
@@ -78,17 +78,15 @@ html {
 
 .HeaderDiv {
   width: 100%;
-  height: 193.47vw;
+  /*height: 169.47vw;*/
+  height: calc(100%);
+  padding-bottom: 23vw;
   border: 0px;
   overflow: scroll;
 }
 
 .SidaHeader {
   font-family: myFirstFont;
-  border: 0px;
-  font-size: 15vw;
-  text-align: center;
-  line-height: 30vw;
   text-shadow: 1px 3px 6px #cacaca;
 }
 
@@ -237,7 +235,7 @@ a {
   margin-top: 6vw;
   margin-left:  13vw;
   margin-right: 1vw;
-  margin-bottom: 2.5vw;
+  margin-bottom: 4vw;
   height: 14vw;
   width: 75vw;
   float: left;
