--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ html {
   top: 100vw;
   background-color: var(--BlåFärg);
 }
-/*-------------Alla spel css-------------*/
+/*-------------Alla spel css hejsan-------------*/
 
 .HeaderDiv {
   width: 100%;
